src/objects/Alarm_Popup_Access__c.object
<CustomObject>
    <description>Contains &quot;Last Access Time&quot; for Alarm popup window for each user</description>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Information_Received__c</fullName>
        <label>Last Call Information Received</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Alarm Popup Access</label>
    <nameField>
        <displayFormat>APA-{0000}</displayFormat>
        <label>Alarm Popup Access名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>